...

  Future<void> _login() async {
    final response = await http.post(
      Uri.parse('http://127.0.0.1:8000/api/token-auth/'),
      headers: {'Content-Type': 'application/json'},
      body: jsonEncode({
        'username': _usernameController.text,
        'password': _passwordController.text,
      }),
    );
    final data = jsonDecode(response.body);
    if (response.statusCode == 200) {
      setState(() {
        _token = data['access'];
...
